sfdx-source/force-app/main/default/objects/Onboarding_Events_Binding__mdt/Onboarding_Events_Binding__mdt.object-meta.xml
<CustomObject>
    <description>LEM-13303: It is used to store mapping of factory classes.</description>
    <label>Onboarding Events Binding</label>
    <pluralLabel>Onboarding Events Bindings</pluralLabel>
</CustomObject>