sfdx-source/force-app/main/default/objects/Onboarding_Events_Binding__mdt/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>LEM-13303: It is used to store the name of the topic.</description>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>